# infsys

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  application.c  definitions.h  gui.h  infsys.c  infsys.h
src/cpu/: cache.c  cache.h  cpucache.c  cpucache.h  cpuid.h  cpuinfo.c  cpuinfo.h  info.c  info.h
src/gpu/: gpuinfo.h
src/hardware/: bios.c  bios.h  gpu.h
src/hardware/cpu/: cache.c  cache.h  cpuid.h  info.c  info.h
src/other/: gpu.h
src/ui/: ui.h  unix_ui.c  win_ui.c
src/windows/: gui.c  winapi.h
